--- a/style.css
+++ b/style.css
@@ -9,16 +9,56 @@ div{
     background-color: red;
     left: 40px;
     top: 120px;
+
     
 }
 .yellow{
     background-color: yellow;
-    /* top: 90px;
-    left: 90px; */
+   
 }
 .blue{
 background-color: blue;
 left: 20px;
 top: 100px;
 
+}
+
+
+
+div{
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    
+}
+.red1{
+    background-color: red;
+    left: 10px;
+    top: 620px;
+    z-index: -1;
+    
+}
+.yellow1{
+    background-color: yellow;
+    z-index: 10;
+    position:   ;
+    left: 60px;
+}
+.blue1{
+background-color: blue;
+left: 30px;
+top:600px;;
+
+}
+ /* media Queries  */
+@media print{
+ h1{
+     color: yellow;
+ }
+}
+
+@media (max-width: 800px){
+    h1{
+    font-size: 100px;
+}
 }
